# dynamic-warehouse

./: README.md  pyproject.toml
src/: dynamic_warehouse.ipynb
